add index css image files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<html>
-  <head>
-    <title>Blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/styles/main.css"
+    rel="stylesheet"
+    type="text/css"
+  />
+</head>
+<body>
+  <div id="page-layout">
+      <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p></div>
+  <div class="blog-sidebar">
+        <ul style="list-style-type: none;">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+  </div>
+  <div id="blog-layout">
+  <div id="blog-header">  
+  <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ <p>
+  </div>
+  </div>
+  </div>
   </body>
 </html>
