add div structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div id="page-layout">
-      <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p></div>
+      <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p> </div>
+  <div class="navbar"> <p>hiii</p></div>
   <div class="blog-sidebar">
         <ul style="list-style-type: none;">
         <li>Item 1</li>
