add blog structure and sidebar

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
       <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p> </div>
   <div class="navbar"> <p>hiii</p></div>
   <div class="blog-sidebar">
-        <ul style="list-style-type: none;">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
+     <ul style="list-style-type: none;">
+     <li> Values Blog </li>
+     <li> Ko Wai Koe </li>
     </ul>
   </div>
   <div id="blog-layout">
   <div id="blog-header">  
-  <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ <p>
+  <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p>
   </div>
   </div>
   </div>
