--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     </ul>
   </div>
   <div id="blog-layout">
-  <div id="blog-header">  
-  <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p>
+  <div class="blog-header">  
+  <p> ✩Values Blog 30/08/2025✩ </p>
   </div>
+  <img class="blog-image" src="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
+
   </div>
   </div>
   </body>
