fix stylesheet link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link
-    href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/styles/main.css"
+    href="doseoftheplagues.github.io/styles/main.css"
     rel="stylesheet"
     type="text/css"
   />
@@ -16,7 +16,7 @@
     <div class="title-bar">Blog posts</div>
      <ul style="list-style-type: none;">
      <li><a href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/values-blog.html">Values Blog</a></li>
-     <li>Tech Blog</li>
+     <li><a href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/tech-blog.html">Tech Blog</a></li>
     </ul>
     <div class="title-bar">Others</div>
     <ul>
