--- a/tech-blog.html
+++ b/tech-blog.html
@@ -3,36 +3,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link
-    href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/styles/main.css"
-    rel="stylesheet"
-    type="text/css"
-  />
+    href="doseoftheplagues.github.io/styles/main.css"rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <div id="page-layout">
       <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p> </div>
   <div class="bar"> <p> ݁₊ ݁₊ ⊹ .⊹ . ݁ . ݁·₊ ⊹ ⋆˙⟡.  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ܁ ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ˖ . ܁</p></div>
   <div class="blog-sidebar">
-    <div class="title-bar">Blog posts</div>
-     <ul style="list-style-type: none;">
-     <li><a href="#values">Values Blog</a></li>
-     <li>Tech Blog</li>
-    </ul>
-    <div class="title-bar">Others</div>
-    <ul>
-      <li><a href="https://github.com/dev-academy-foundations/ko-wai-koe/blob/main/sofia-tarn.md"> Ko Wai Koe </a></li>
-    </ul>
      <div class="title-bar"><a href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/index.html">Home</a></div>
   </div>
   <div id="blog-layout">
 
   <div class="blog-header">  
-  <p id="values"> ✩Values Blog 30/08/2025✩ </p>
+  <p id="values"> ✩Tech Blog 05/09/2025✩ </p>
   </div>
   <img class="blog-image" src="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
-  <p class="blog-subheader">Explain a situation where you have made an ethical decision. 
-    Discuss how you weighed up the values involved in that decision, the decision you 
-    made, and how you reflect on the decision now.</p> 
+  <p class="blog-subheader">Best practice for CSS Classes and Ids</p> 
     <p class="blog-body"> An ethical decision I have had 
     to make recently was to provide an alternative platform for people to listen to my music. 
     Recently news broke that the ceo of the largest music streaming company Spotify was 
