--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link
-    href="styles/main.css"
+    href="doseoftheplagues.github.io/styles/main.css"
     rel="stylesheet"
     type="text/css"
   />
