fix image and stylesheet links

--- a/values-blog.html
+++ b/values-blog.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link
-    href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/styles/main.css"
+    href="doseoftheplagues.github.io/styles/main.css"
     rel="stylesheet"
     type="text/css"
   />
@@ -13,14 +13,14 @@
       <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p> </div>
   <div class="bar"> <p> ݁₊ ݁₊ ⊹ .⊹ . ݁ . ݁·₊ ⊹ ⋆˙⟡.  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ܁ ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ˖ . ܁</p></div>
   <div class="blog-sidebar">
-     <div class="title-bar"><a href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/index.html">Home</a></div>
+     <div class="title-bar"><a href="doseoftheplagues.github.io/index.html">Home</a></div>
   </div>
   <div id="blog-layout">
 
   <div class="blog-header">  
   <p id="values"> ✩Values Blog 30/08/2025✩ </p>
   </div>
-  <img class="blog-image" src="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
+  <img class="blog-image" src="doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
   <p class="blog-subheader">Explain a situation where you have made an ethical decision. 
     Discuss how you weighed up the values involved in that decision, the decision you 
     made, and how you reflect on the decision now.</p> 
