--- a/tech-blog.html
+++ b/tech-blog.html
@@ -10,14 +10,14 @@
       <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p> </div>
   <div class="bar"> <p> ݁₊ ݁₊ ⊹ .⊹ . ݁ . ݁·₊ ⊹ ⋆˙⟡.  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ܁ ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ˖ . ܁</p></div>
   <div class="blog-sidebar">
-     <div class="title-bar"><a href="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/index.html">Home</a></div>
+     <div class="title-bar"><a href="doseoftheplagues.github.io/index.html">Home</a></div>
   </div>
   <div id="blog-layout">
 
   <div class="blog-header">  
   <p id="values"> ✩Tech Blog 05/09/2025✩ </p>
   </div>
-  <img class="blog-image" src="/Users/sofiatarn/workspace/dev-academy/doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
+  <img class="blog-image" src="doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
   <p class="blog-subheader">Best practice for CSS Classes and Ids</p> 
     <p class="blog-body"> An ethical decision I have had 
     to make recently was to provide an alternative platform for people to listen to my music. 
