--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="blog-header">  
   <p id="values"> ✩Home✩ </p>
   </div>
-  <img class="blog-image" src="doseoftheplagues.github.io/images-gifs/9783569_e7c53.gif"></img>
+  <img class="blog-image" src="https://doseoftheplagues.github.io/images-gifs/9783569_e7c53.gif"></img>
     <p class="blog-body">I was going to have all my blogs on the homepage until I realised it was required that me make new html files for each individual blog and now my homepage is barrren and sad. The fence cats are listening to music. </p>
     <br><br><br>
     <pre>
