--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <div class="blog-sidebar">
     <div class="title-bar">Blog posts</div>
      <ul style="list-style-type: none;">
-     <li><a href="doseoftheplagues.github.io/values-blog.html">Values Blog</a></li>
-     <li><a href="doseoftheplagues.github.io/tech-blog.html">Tech Blog</a></li>
+     <li><a href="https://doseoftheplagues.github.io/values-blog.html">Values Blog</a></li>
+     <li><a href="https://doseoftheplagues.github.io/tech-blog.html">Tech Blog</a></li>
     </ul>
     <div class="title-bar">Others</div>
-    <ul>
+    <ul style="list-style-type: none;">
       <li><a href="https://github.com/dev-academy-foundations/ko-wai-koe/blob/main/sofia-tarn.md"> Ko Wai Koe </a></li>
     </ul>
   </div>
