--- a/tech-blog.html
+++ b/tech-blog.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link
-    href="doseoftheplagues.github.io/styles/main.css"rel="stylesheet" type="text/css"/>
+    href="https://doseoftheplagues.github.io/styles/main.css"rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <div id="page-layout">
@@ -17,7 +17,7 @@
   <div class="blog-header">  
   <p id="values"> ✩Tech Blog 05/09/2025✩ </p>
   </div>
-  <img class="blog-image" src="doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
+  <img class="blog-image" src="https://doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
   <p class="blog-subheader">Best practice for CSS Classes and Ids</p> 
     <p class="blog-body"> An ethical decision I have had 
     to make recently was to provide an alternative platform for people to listen to my music. 
