--- a/tech-blog.html
+++ b/tech-blog.html
@@ -19,27 +19,8 @@
   </div>
   <img class="blog-image" src="https://doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
   <p class="blog-subheader">Best practice for CSS Classes and Ids</p> 
-    <p class="blog-body"> An ethical decision I have had 
-    to make recently was to provide an alternative platform for people to listen to my music. 
-    Recently news broke that the ceo of the largest music streaming company Spotify was 
-    using the millions earned off of the artists on the platform to invest in Ai drone 
-    research to be used in warfare. After a great deal of public outcry many musicians 
-    are considering alternative platforms to host and release thier music with some removing 
-    their music from the platform entirely. While I have a very small audience and do not 
-    believe that my personal catalogue is generating much if any money that could be spent 
-    on warmongering and things my values do not align with whatsoever, I did want to provide 
-    the people within my community who do engage with my music an alternative cost free way 
-    to download and listen. I made a small html website that hosts a link to a file where anyone 
-    can download all of my released music for free, as well as a small version of a streaming 
-    site for the songs so people can listen online. It is important to me that music and art 
-    can be free and accessible for everyone and being in control of my own method of providing 
-    that seemed like the best choice.</p>
-    <p class="blog-subheader">Describe how your culture and the people around you have influenced your values and identity. </p>
-    <p class="blog-body">I have been deeply influenced by local art collectives and communities in Te Whanganui-a-Tara, the way in which people come together to make events and collaborative projects happen has shaped what I think is possible with limited resources. </p>
-    <p class="blog-subheader">Identify your strengths and how they will support you during your learning journey. </p>
-    <p class="blog-body">I am a persistent learner, I am able to self manage my time and learning well and I am a clear communicator in group settings. I think my ability to work well with others will be very valuable in this learning journey, especially given the often collaborative nature of coding and software development. </p>
-    <p class="blog-subheader"> Evaluate your limitations in terms of your learning and career development. How might these affect your learning journey?</p>
-    <p class="blog-body"> I can struggle with engaging with topics that I dont have a personal interest in which can be detrimental to my learning when not kept in check. </p>
+    <p class="blog-body"> Classes and ids are used to apply css or javascript to a targeted html element. Classes are used to create a class of css elements that are intended to be used repeatedly throughout a given project. Ids are used to create individual elements with unique properties that will be used once or in only a few instances. Classes and ids use the same syntax: class=”class-name” id=”id-name”. Best practice when coding is to use classes more often than ids. This makes projects far more manageable as they grow bigger, having fewer classes that apply to large sections of the code is preferable to having to parse lots of hyperspecific id styling. Css specificity rules mean that ids override classes, and classes override elements. This means that if an element’s style rules dictate that a box should be red, a class's rules dictate it should be green and an id’s rules say blue, the box will be made blue, as the id’s style rules take priority.</p>
+    
   </div>
   </div>
   </body>
