--- a/tech-blog.html
+++ b/tech-blog.html
@@ -10,7 +10,7 @@
       <div class="header"> <p> ₊✩‧₊˚౨ Sofia.Devacademy.Blog ৎ˚₊✩‧₊ </p> </div>
   <div class="bar"> <p> ݁₊ ݁₊ ⊹ .⊹ . ݁ . ݁·₊ ⊹ ⋆˙⟡.  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ܁ ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ .  ݁₊ ⊹ . ݁˖ . ݁·₊ ⊹ ⋆˙⟡. ܁˖ . ˖ . ܁</p></div>
   <div class="blog-sidebar">
-     <div class="title-bar"><a href="doseoftheplagues.github.io/index.html">Home</a></div>
+     <div class="title-bar"><a href="https://doseoftheplagues.github.io/index.html">Home</a></div>
   </div>
   <div id="blog-layout">
 
@@ -20,6 +20,17 @@
   <img class="blog-image" src="https://doseoftheplagues.github.io/images-gifs/254638_16a55.gif"></img>
   <p class="blog-subheader">Best practice for CSS Classes and Ids</p> 
     <p class="blog-body"> Classes and ids are used to apply css or javascript to a targeted html element. Classes are used to create a class of css elements that are intended to be used repeatedly throughout a given project. Ids are used to create individual elements with unique properties that will be used once or in only a few instances. Classes and ids use the same syntax: class=”class-name” id=”id-name”. Best practice when coding is to use classes more often than ids. This makes projects far more manageable as they grow bigger, having fewer classes that apply to large sections of the code is preferable to having to parse lots of hyperspecific id styling. Css specificity rules mean that ids override classes, and classes override elements. This means that if an element’s style rules dictate that a box should be red, a class's rules dictate it should be green and an id’s rules say blue, the box will be made blue, as the id’s style rules take priority. </p>
+
+
+<a href="#bookmark"> Click to jump to bookmark! </a>
+<!--  
+more code
+-->
+<p id="bookmark"> Bookmark </p>
+
+
+
+
 
   </div>
   </div>
