--- a/tech-blog.html
+++ b/tech-blog.html
@@ -34,7 +34,7 @@ more code
 <img class="alt-blog-image" src="https://doseoftheplagues.github.io/images-gifs/Image 05-09-2025 at 12.23 PM.jpg"> </img>
 <br><br><br><br><br><br>
 <p class="blog-body"> Classes and ids use the same syntax: class=”class-name” id=”id-name”. Best practice when coding is to use classes for everything that doesn’t need an individual function or style. This makes projects far more manageable as they grow bigger, having fewer classes that apply to large sections of the code is preferable to having to parse lots of hyperspecific id styling. Css specificity rules mean that ids override classes, and classes override elements. This means that if an element’s style rules dictate that an h3 should be pink, a class's rules dictate it should be purple and an id’s rules say black, the h3 heading will be made blue, as the id’s style rules take priority.</p>
-
+<img class="alt-blog-image" src="https://doseoftheplagues.github.io/images-gifs/Image 05-09-2025 at 11.47 AM.jpg"> </img>
 
 
   </div>
