--- a/tech-blog.html
+++ b/tech-blog.html
@@ -21,21 +21,18 @@
   <p class="blog-subheader">Best practice for CSS Classes and Ids</p> 
     <p class="blog-body"> Classes and ids are used to apply css or javascript to a targeted html element. Classes are used to create a class of css elements that are intended to be 
       used repeatedly throughout a given project. Ids are used to create individual elements with unique properties that will be used once or in only a few instances. Ids also can 
-      serve as bookmarks that can be used to jump to a specific place on the page. This is achieved by designating a link’s href destination to match the id of the targeted destination.  </p>
+      serve as bookmarks that can be used to jump to a specific place on the page. This is achieved by designating a link’s href destination to match the id of the targeted destination. Here's an example of this: The following link will take you to the P tag at the bottom of the page that has the corresponding bookmark id. The code for this is shown in the image below.  </p>
 
 <a href="#bookmark"> Click to jump to bookmark! </a>
-<!--  
-more code
--->
-<p id="bookmark"> Bookmark </p>
 
 <br>
 
 <img class="alt-blog-image" src="https://doseoftheplagues.github.io/images-gifs/Image 05-09-2025 at 12.23 PM.jpg"> </img>
-<br><br><br><br><br><br>
+<br>
 <p class="blog-body"> Classes and ids use the same syntax: class=”class-name” id=”id-name”. Best practice when coding is to use classes for everything that doesn’t need an individual function or style. This makes projects far more manageable as they grow bigger, having fewer classes that apply to large sections of the code is preferable to having to parse lots of hyperspecific id styling. Css specificity rules mean that ids override classes, and classes override elements. This means that if an element’s style rules dictate that an h3 should be pink, a class's rules dictate it should be purple and an id’s rules say black, the h3 heading will be made blue, as the id’s style rules take priority.</p>
 <img class="alt-blog-image" src="https://doseoftheplagues.github.io/images-gifs/Image 05-09-2025 at 11.47 AM.jpg"> </img>
-
+<p class="blog-body">When naming classes and ids it is best to conform to standard coding naming practices like typing in lowercase and replacing empty spacing with hypens. </p>
+<p id="bookmark"> Bookmark </p>
 
   </div>
   </div>
