add learning plan

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <div class="blog-sidebar">
     <div class="title-bar">Blog posts</div>
      <ul style="list-style-type: none;">
+      <li><a href="https://doseoftheplagues.github.io/learning-plan.html">Learning Plan</a></li>
+      <li><a href="https://doseoftheplagues.github.io/tech-blog.html">Tech Blog</a></li>
      <li><a href="https://doseoftheplagues.github.io/values-blog.html">Values Blog</a></li>
-     <li><a href="https://doseoftheplagues.github.io/tech-blog.html">Tech Blog</a></li>
     </ul>
     <div class="title-bar">Others</div>
     <ul style="list-style-type: none;">
