add learning plan catgif

--- a/learning-plan.html
+++ b/learning-plan.html
@@ -20,7 +20,7 @@
   <div class="blog-header">  
   <p id="values"> ✩Learning Plan 05/09/2025✩ </p>
   </div>
-  <img class="blog-image" src="https://doseoftheplagues.github.io/images-gifs/picmix.com_11241664.gif"></img>
+  <img class="blog-image" src="https://doseoftheplagues.github.io/images-gifs/4118978_d6358.gif"></img>
   <p class="blog-subheader">What is your long term goal or career pathway?</p> 
   <p class="blog-body">I would like to work in software development in some form, ideally something more focused on front end UI and Ux development as that is what calls me the most in coding. I enjoy making things with consideration as to how they will be interacted with and I enjoy a lot of the more design focused parts of coding. Ideally I would establish a balance where some income comes from software development and some comes from my other interests (music production, live performance, building instruments etc).</p>
     <p class="blog-subheader">A description of your strengths and limitations when it comes to learning</p> 
